Added Job to the MetaTask selection
Changes:
- MetaTask record perferredJobs and uses in the applyPersonModifiers
- Each MetaTask subclass defined the preferred JobType if there are any
- Remove some unused imports
- Changes the MetaTask to simplify defining Favourites & TaskTraits.

mars-sim#297